--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <script src="https://kit.fontawesome.com/03abd041c3.js" crossorigin="anonymous"></script>
     <meta charset="utf-8" />
-    <title>ПИСАРІВСЬКИЙ ГРАНІТНИЙ КАР'ЄР</title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Site</title>
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
@@ -13,13 +15,13 @@
           <li class="nav-item df logo">
             <a href="#head"><i class="fa-brands fa-atlassian fa-2x"></i></a>
           </li>
-          <li class="nav-item df"><a href="#WhyWe">Наші переваги </a></li>
-          <li class="nav-item df"><a href="#AboutUs">Про нас</a></li>
-          <li class="nav-item df"><a href="#Products">Продукція</a></li>
-          <li class="nav-item df"><a href="#FinZvit">Фінансові звіти</a></li>
+          <li class="nav-item df d-n"><a href="#WhyWe">Наші переваги </a></li>
+          <li class="nav-item df d-n"><a href="#AboutUs">Про нас</a></li>
+          <li class="nav-item df d-n"><a href="#Products">Продукція</a></li>
+          <li class="nav-item df d-n"><a href="#FinZvit">Фінансові звіти</a></li>
         </ul>
 
-        <ul>
+        <ul class="contact">
           <li class="nav-item df"><i class="fa-regular fa-envelope"></i></li>
           <li class="nav-item df"><i class="fa-solid fa-mobile-screen"></i></li>
           <li class="nav-item df"><i class="fa-solid fa-location-dot"></i></li>
@@ -94,7 +96,7 @@
           </li>
           <li class="item4 item df">
             <i class="fa-solid fa-user-pen"></i>
-            <p>Індивідуальний підхід</p>
+            <p>Індивідуа&shy;льний підхід</p>
           </li>
           <li class="item5 item df">
             <p>Надійне постачання будь-яким транспортом</p>
@@ -437,7 +439,7 @@
               якого він виробляється. Фізико-механічні властивості щебеню виробленого на діючому ДСЗ:
             </p>
 
-            <ul class="table-sheben warp df">
+            <ul class="table-sheben  ">
               <li>Марка щебеню за міцністю – 1200-1400;</li>
               <li>Марка щебеню по зносу – СТ-1;</li>
               <li>Марка з морозостійкості – МРЗ-300</li>
